// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card Card.Group matches snapshot 1`] = `
<CardGroup>
  <Row
    className="govuk-card-group"
  >
    <div
      className="govuk-grid-row govuk-card-group"
    >
      <CardGroupItem
        width="one-half"
      >
        <Col
          className="govuk-card-group__item"
          width="one-half"
        >
          <div
            className="govuk-grid-column-one-half govuk-card-group__item"
          >
            <Card
              feature={false}
            >
              <div
                className="govuk-card"
              >
                <CardContent>
                  <div
                    className="govuk-card__content"
                  >
                    <CardHeading
                      headingLevel="h2"
                    >
                      <HeadingLevel
                        className="govuk-card__heading"
                        headingLevel="h2"
                      >
                        <h2
                          className="govuk-card__heading"
                        >
                          Test Card 1
                        </h2>
                      </HeadingLevel>
                    </CardHeading>
                    <CardDescription>
                      <p
                        className="govuk-card__description"
                      >
                        Test Card 1 Description
                      </p>
                    </CardDescription>
                  </div>
                </CardContent>
              </div>
            </Card>
          </div>
        </Col>
      </CardGroupItem>
      <CardGroupItem
        width="one-half"
      >
        <Col
          className="govuk-card-group__item"
          width="one-half"
        >
          <div
            className="govuk-grid-column-one-half govuk-card-group__item"
          >
            <Card
              feature={false}
            >
              <div
                className="govuk-card"
              >
                <CardContent>
                  <div
                    className="govuk-card__content"
                  >
                    <CardHeading
                      headingLevel="h2"
                    >
                      <HeadingLevel
                        className="govuk-card__heading"
                        headingLevel="h2"
                      >
                        <h2
                          className="govuk-card__heading"
                        >
                          Test Card 2
                        </h2>
                      </HeadingLevel>
                    </CardHeading>
                    <CardDescription>
                      <p
                        className="govuk-card__description"
                      >
                        Test Card 2 Description
                      </p>
                    </CardDescription>
                  </div>
                </CardContent>
              </div>
            </Card>
          </div>
        </Col>
      </CardGroupItem>
    </div>
  </Row>
</CardGroup>
`;

exports[`Card matches snapshot 1`] = `
<Card
  feature={false}
>
  <div
    className="govuk-card"
  >
    <CardImage
      alt="imageAlt"
      src="imageSrc"
    >
      <img
        alt="imageAlt"
        className="govuk-card__img"
        src="imageSrc"
      />
    </CardImage>
    <CardContent>
      <div
        className="govuk-card__content"
      >
        <CardHeading
          headingLevel="h2"
        >
          <HeadingLevel
            className="govuk-card__heading"
            headingLevel="h2"
          >
            <h2
              className="govuk-card__heading"
            >
              If you need help now but it's not an emergency
            </h2>
          </HeadingLevel>
        </CardHeading>
        <CardDescription>
          <p
            className="govuk-card__description"
          >
            Go to
             
            <a
              href="#"
            >
              111.nhs.uk
            </a>
             
            or
             
            <a
              href="#"
            >
              call 111
            </a>
          </p>
        </CardDescription>
      </div>
    </CardContent>
  </div>
</Card>
`;
